chore: update example

--- a/example.ipynb
+++ b/example.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4a1938c-2f7b-4a3e-9c54-c25ea3e82b3f",
+   "metadata": {},
+   "source": [
+    "Create a \"heavy\" MIME bundle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "8d90855d-8196-45a9-a0e3-1a23b6767251",
@@ -23,14 +31,13 @@
     "with capture_output() as captured:\n",
     "    display(\n",
     "        Image(\"https://cdn.curvenote.com/0191bd75-1494-72f5-b48a-a0aaad296e4c/public/21f8f79cc1d584b9e372b7a92cde564f.png\")\n",
-    "    )\n",
-    "    "
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8431c8d4-a755-4871-ad9f-096a565b0ca9",
+   "id": "b583bcf9-2000-4cc4-992c-76282b239aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,33 +47,26 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c4da404-c41e-4306-a6a6-77db41cce2b2",
+   "id": "1cec5b7a-c963-4c2f-8362-f99454fc75cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_mime = output.data\n",
     "preferred_mime_type, data = next(((k, v) for k, v in raw_mime.items() if k.startswith(\"image\")))\n",
-    "hash_ = hashlib.sha256(data.encode()).hexdigest()"
+    "hash_ = hashlib.sha256(json.dumps(data).encode()).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80b1cd86-844f-40e6-9edd-e3cdd36e82dd",
+   "metadata": {},
+   "source": [
+    "Write heavy MIME bundle to disk"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c91e21d7-d889-4288-ac4e-6a8a27f1b5c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nbtx_mime = {\n",
-    "    \"application/vnd.nbtx.output+json\": {\n",
-    "        \"hash\": hash_,\n",
-    "        \"mimeType\": preferred_mime_type\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "c1958cf1-020a-425c-924c-8060a24a059d",
    "metadata": {},
    "outputs": [],
@@ -76,13 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0faca2a0-5eb5-4452-a7ce-8cc8a023e321",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(f\"mime/{hash_}.json\", \"w\") as f:\n",
     "    json.dump(raw_mime, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f084a1e-1d90-4b91-b409-407647c202ed",
+   "metadata": {},
+   "source": [
+    "Create a \"lightweight\" placeholder MIME bundle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c91e21d7-d889-4288-ac4e-6a8a27f1b5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nbtx_mime = {\n",
+    "    \"application/vnd.nbtx.output+json\": {\n",
+    "        \"hash\": hash_,\n",
+    "        \"mimeTypes\": raw_mime.keys()\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -94,8 +117,11 @@
     {
      "data": {
       "application/vnd.nbtx.output+json": {
-       "hash": "eecd1aa849c417c5fa4b967e2a77a770f34bc5fb973a6c60def0d8a8d80eccf8",
-       "mimeType": "image/png"
+       "hash": "f804ba1c4aeb32b8c55b45e11ec9f1305b880b8275dd765731e31490b375717d",
+       "mimeTypes": [
+        "image/png",
+        "text/plain"
+       ]
       }
      },
      "metadata": {},
@@ -105,14 +131,6 @@
    "source": [
     "display(nbtx_mime, metadata=output.metadata, raw=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dc4d1a4-414b-4296-8e67-6a8de060b903",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
